Fixed offline/invisible people in pop ups

--- a/css/Quiet.css
+++ b/css/Quiet.css
@@ -3722,6 +3722,8 @@ form .bf-toolbar{position:absolute !important;transform:translate(0px, -60px) !i
 
 .statusOnline-1Mp2_H{background-color:transparent;border-color:#43b581 !important;}
 
+.statusInvisible-2ci18Q, .statusOffline-jZXr_u {background-color: transparent; border-color: #747f8d !important;}
+
 .statusDnd-35xAXU{background-color:transparent;border-color:#f04747 !important;}
 
 .statusIdle-2AQdvu{background-color:transparent;border-color:#faa61a !important;}
